@startuml Demy: IAM ER Diagram
title Demy: IAM ER Diagram

' NOTE: ROLE_USER (Student role) was removed.
' Roles enum reduced to ROLE_ADMINISTRATOR, ROLE_TEACHER.

hide circle
skinparam linetype ortho

entity "users" as users {
  *id : BIGINT <<PK>>
  --
  *email_address : VARCHAR(255) <<UK>>
  *password : VARCHAR(120)
  *verification_code : VARCHAR(20)
  *verification_expires : DATETIME
  *tenant_id : BIGINT
  *verification_status : ENUM('NOT_VERIFIED','VERIFIED')
  *account_status : ENUM('PENDING','ACTIVE','BLOCKED','DELETED')
  *created_at : DATETIME
  *updated_at : DATETIME
}

entity "roles" as roles {
  *id : BIGINT <<PK>>
  --
  *name : ENUM('ROLE_ADMINISTRATOR','ROLE_TEACHER') <<UK>>
}

entity "user_roles" as user_roles {
  *user_id : BIGINT <<PK,FK>>
  *role_id : BIGINT <<PK,FK>>
}

users ||--o{ user_roles
roles ||--o{ user_roles

@enduml
